--- a/TopNotify.WWW/topnotify/src/index.css
+++ b/TopNotify.WWW/topnotify/src/index.css
@@ -67,7 +67,7 @@ body {
 
 .locationCard {
     width: 100%;
-    height: 300px;
+    height: 280px;
     background-image: url("/Image/BackgroundDecoration.jpg");
     background-size: cover;
     background-repeat: no-repeat;
@@ -75,6 +75,30 @@ body {
     border-radius: 5px;
     position: relative;
     margin-top: 20px;
+    overflow: hidden;
+}
+
+
+.locationCard .notifyTaskbar {
+    position: absolute;
+    bottom: 0;
+    height: 20px;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.locationCard .notifyTaskbar img {
+    height: 80%;
+}
+
+
+.locationCard .notifyLocations {
+    position: relative;
+    width: 100%;
+    height: calc(100% - 20px);
 }
 
 .locationCard .notifyLocation {
