--- a/TopNotify.WWW/topnotify/src/index.css
+++ b/TopNotify.WWW/topnotify/src/index.css
@@ -18,6 +18,7 @@
 .app.loaded {
     transition: opacity 0.3s, transform 0.3s;
     opacity: 1;
+    height: 96vh;
     transform: scale(1);
 }
 
@@ -61,6 +62,7 @@ body {
     padding-top: 7px;
     overflow: auto;
     height: 100vh;
+    width: 100vw;
     background-color: transparent !important;
 }
 
@@ -149,6 +151,32 @@ body {
 
 .locationCard .notifyLocation.custom p {
     font-size: 18px;
+}
+
+
+.footer {
+    position: absolute;
+    width: 100%;
+    height: 40px;
+    bottom: 0;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.2);
+    display: flex;
+    align-items: center;
+}
+
+.footerLogo {
+    height: 50%;
+    margin-left: 10px;
+    opacity: 0.8;
+    filter: invert(100);
+}
+
+@media (prefers-color-scheme: dark) {
+    .footerLogo {
+        filter: none;
+        opacity: 0.6;
+    }
 }
 
 h2 {
