--- a/TopNotify.WWW/topnotify/src/index.css
+++ b/TopNotify.WWW/topnotify/src/index.css
@@ -108,6 +108,19 @@ body {
     border-radius: 5px;
 }
 
+.previewContainer .notificationWindowPreview .notificationPreview img {
+    height: 100%;
+    width: auto;
+    filter: invert(100%);
+}
+
+
+@media (prefers-color-scheme: dark) {
+    .previewContainer .notificationWindowPreview .notificationPreview img {
+        filter: none;
+    }
+}
+
 .footer {
     position: absolute;
     width: 100%;
