--- a/TopNotify.WWW/topnotify/src/index.css
+++ b/TopNotify.WWW/topnotify/src/index.css
@@ -79,6 +79,9 @@ body {
     position: relative;
     margin-top: 20px;
     overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -114,6 +117,33 @@ body {
     filter: invert(100%);
 }
 
+.previewContainer .locationSelect {
+    border-radius: 5px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2.2rem;
+}
+
+.previewContainer .locationSelectButton {
+    background-color: var(--col-overlay) !important;
+    width: 2.5rem;
+    height: 2.5rem;
+    font-size: 1.8rem;
+    font-weight: 100;
+}
+
+.previewContainer .locationSelectButton:hover {
+    opacity: 0.8;
+}
+
+.previewContainer .customLocationSelectButton { 
+    position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
 
 @media (prefers-color-scheme: dark) {
     .previewContainer .notificationWindowPreview .notificationPreview img {
