--- a/TopNotify.WWW/topnotify/src/index.css
+++ b/TopNotify.WWW/topnotify/src/index.css
@@ -11,12 +11,12 @@
 
 
 .app {
+    transition: opacity 0.3s, transform 0.3s;
     opacity: 0;
     transform: scale(0.95);
 }
 
 .app.loaded {
-    transition: opacity 0.3s, transform 0.3s;
     opacity: 1;
     height: calc(100vh - 27px);
     transform: scale(1);
@@ -41,7 +41,8 @@
 
     --chakra-colors-blue-500: var(--col-primary) !important;
     --chakra-colors-blue-200: var(--col-primary) !important;
-    --drawer-bg: var(--col-contrast) !important;
+    --drawer-bg: transparent !important;
+    --drawer-box-shadow: none !important;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -179,12 +180,12 @@ body {
     }
 }
 
-h2 {
+h2, .chakra-modal__header {
     margin: 0 !important;
-    line-height: 40px;
-    font-size: 30px;
-    font-weight: 600;
-    letter-spacing: -0.05em;
+    line-height: 40px !important;
+    font-size: 30px !important;
+    font-weight: 600 !important;
+    letter-spacing: -0.05em !important;
 }
 
 .buttonContainer button {
@@ -214,6 +215,10 @@ label {
     width: 100%;
     margin-top: 10px;
     margin-bottom: 10px;
+}
+
+.chakra-modal__content {
+    height: 100%;
 }
 
 *::-webkit-scrollbar {
