--- a/TopNotify.WWW/topnotify/src/index.css
+++ b/TopNotify.WWW/topnotify/src/index.css
@@ -155,6 +155,23 @@ body {
     }
 }
 
+.errorMessage {
+    height: 40px;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.2);
+    display: flex;
+    align-items: center;
+    font-size: 12px;
+    padding-left: 10px;
+    gap: 10px;
+    margin-top: 12px;
+}
+
+.errorMessage h4 {
+    font-size: 20px;
+    color: var(--col-secondary);
+}
+
 .footer {
     position: absolute;
     width: 100%;
