Reword App Sound Warning

--- a/TopNotify.WWW/topnotify/src/CSS/App.css
+++ b/TopNotify.WWW/topnotify/src/CSS/App.css
@@ -91,6 +91,10 @@ body {
     color: var(--col-secondary);
 }
 
+.errorMessage.medium {
+    height: 60px;
+}
+
 .footer {
     position: absolute;
     width: 100%;
