--- a/TopNotify.Tauri/src/CSS/App.css
+++ b/TopNotify.Tauri/src/CSS/App.css
@@ -20,8 +20,8 @@ body {
     --col-text: #111111;
     --col-text-washed: #3d3d3d;
     --col-text-overlay: #111111;
-    --col-primary: #06b6d4;
-    --col-primary-washed: #9aedfa8a;
+    --col-primary: #7006d4;
+    --col-primary-washed: #bf9afa8a;
     --col-primary-hover: #492fbb;
     --col-tertiary: #ffffff;
     --col-contrast: #ebebeb;
@@ -46,8 +46,8 @@ body {
         --col-text: #F1ECF3;
         --col-text-washed: #d8d8d8;
         --col-text-overlay: #F1ECF3;
-        --col-primary: #04B2C5;
-        --col-primary-washed: #00a9bc96;
+        --col-primary: #7006d4;
+        --col-primary-washed: #45009e;
         --col-primary-hover: #6268d3;
         --col-tertiary: #121212;
         --col-contrast: #343434;
@@ -61,4 +61,10 @@ body {
 h1, h2, h3, h4, h5, h6 {
     font-weight: 600;
     margin: 0;
+}
+
+.appSplitView {
+    display: flex;
+    width: 100vw;
+    height: 100vh;
 }
