--- a/TopNotify.Tauri/src/CSS/SplashScreen.css
+++ b/TopNotify.Tauri/src/CSS/SplashScreen.css
@@ -11,6 +11,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    pointer-events: none;
 }
 
 .splashScreen.showSplashScreen {
