V3 UI: Add Clickable Ghost Notification Previews

--- a/TopNotify.Tauri/src/CSS/PositionPage.css
+++ b/TopNotify.Tauri/src/CSS/PositionPage.css
@@ -39,6 +39,13 @@
     filter: invert(100%);
 }
 
+.notificationWindowPreview .ghostNotificationPreview {
+    border: 5px dashed white;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.1) 0px 1px 2px -1px;
+    cursor: pointer;
+}
+
 @media (prefers-color-scheme: dark) {
     .notificationWindowPreview .notificationPreview img {
         filter: none;
