Major V3 Refactor: Ability to disable sound interceptor
Co-Authored-By: SamsidParty <business@samsidparty.com>

--- a/TopNotify/src-vite/src/CSS/App.css
+++ b/TopNotify/src-vite/src/CSS/App.css
@@ -67,6 +67,11 @@
     }
 }
 
+*[data-greyed-out="true"] {
+    pointer-events: none;
+    opacity: 0.5;
+}
+
 body {
     display: flex;
     flex-direction: column;
