--- a/TopNotify/src-vite/src/CSS/ChakraOverrides.css
+++ b/TopNotify/src-vite/src/CSS/ChakraOverrides.css
@@ -16,7 +16,7 @@
 h2, .chakra-modal__header {
     margin: 0 !important;
     line-height: 65px !important;
-    font-size: 4vh !important;
+    font-size: 6.5vw !important;
     font-weight: 600 !important;
     letter-spacing: -0.05em !important;
 }
