--- a/TopNotify/src-vite/src/CSS/NotificationSounds.css
+++ b/TopNotify/src-vite/src/CSS/NotificationSounds.css
@@ -9,6 +9,10 @@
     width: 200px;
 }
 
+.appReferenceSoundItem .selectSoundButton * {
+    float: right;
+}
+
 .appReferenceSoundItem img {
     width: 24px;
     height: 24px;
