--- a/TopNotify/src-vite/src/CSS/Preview.css
+++ b/TopNotify/src-vite/src/CSS/Preview.css
@@ -59,7 +59,7 @@
     background-color: var(--col-overlay) !important;
     width: 2.5rem;
     height: 2.5rem;
-    font-size: 1.8rem;
+    font-size: 1.8rem !important;
     font-weight: 100;
 }
 
