Some bugfixes in preparation for 3.0.0
Co-Authored-By: SamsidParty <business@samsidparty.com>

--- a/TopNotify/src-vite/src/CSS/App.css
+++ b/TopNotify/src-vite/src/CSS/App.css
@@ -177,7 +177,7 @@ button {
     padding: 14px !important;
     font-size: 12px !important;
     font-weight: 400 !important;
-    color: white !important;
+    color: var(--col-text) !important;
     border-radius: 3px !important;
 }
 
