Fix: Prevent button flashing white in about section
Co-Authored-By: SamsidParty <business@samsidparty.com>

--- a/TopNotify/src-vite/src/CSS/ChakraOverrides.css
+++ b/TopNotify/src-vite/src/CSS/ChakraOverrides.css
@@ -13,6 +13,10 @@
     margin-top: 1vh;
 }
 
+.chakra-button, .chakra-button * {
+    transition: none !important;
+}
+
 h2, .chakra-modal__header {
     margin: 0 !important;
     line-height: 65px !important;
