Minor GUI fixes
Co-Authored-By: SamsidParty <business@samsidparty.com>

--- a/TopNotify/src-vite/src/CSS/App.css
+++ b/TopNotify/src-vite/src/CSS/App.css
@@ -217,6 +217,10 @@ button svg {
 }
 
 button svg * {
+    color: var(--col-text);
+}
+
+.iconButton svg * {
     color: var(--system-accent-foreground);
 }
 
