fix: finally fix the portrait mode preview bug
Co-Authored-By: SamsidParty <business@samsidparty.com>

--- a/TopNotify/src-vite/src/CSS/Preview.css
+++ b/TopNotify/src-vite/src/CSS/Preview.css
@@ -9,6 +9,8 @@
     border-bottom-left-radius: 0px;
     position: relative;
     margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
     overflow: hidden;
     display: flex;
     justify-content: center;
